# CrateBay

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh.md  Cargo.toml  README.md  README.zh.md
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  provider-canary.yml
crates/cargobay-cli/: Cargo.toml
crates/cargobay-cli/src/: main.rs
crates/cargobay-core/: Cargo.toml
crates/cargobay-core/src/: hypervisor.rs  images.rs  k3s.rs  lib.rs  linux.rs  macos.rs  portfwd.rs  store.rs  vm.rs  windows.rs
crates/cargobay-core/tests/: integration.rs
crates/cargobay-daemon/src/: service.rs
crates/cargobay-gui/: package-lock.json  package.json
crates/cargobay-gui/src/: App.css  App.tsx  icons.tsx  types.ts
crates/cargobay-gui/src-tauri/: Cargo.toml
crates/cargobay-gui/src-tauri/src/: lib.rs
crates/cargobay-gui/src/hooks/: useVms.ts
crates/cargobay-gui/src/i18n/: messages.ts
crates/cargobay-gui/src/pages/: Containers.tsx  Vms.tsx
crates/cargobay-vz/: Cargo.toml  build.rs
crates/cargobay-vz/bridge/: VZBridge.h  VZBridge.swift
crates/cargobay-vz/src/: ffi.rs  main.rs
crates/cratebay-cli/src/: main.rs
crates/cratebay-core/src/: windows.rs
crates/cratebay-daemon/src/: main.rs
crates/cratebay-gui/: eslint.config.js  package-lock.json  package.json  playwright.config.ts
crates/cratebay-gui/e2e/: ai-flows.spec.ts  app-shell.spec.ts  runtime-flows.spec.ts  security-flows.spec.ts
crates/cratebay-gui/e2e/support/: tauri.ts
crates/cratebay-gui/src/: App.test.tsx  App.tsx  icons.tsx  index.css  types.ts
crates/cratebay-gui/src-tauri/: Cargo.toml  tauri.windows.conf.json
crates/cratebay-gui/src-tauri/capabilities/: default.json
crates/cratebay-gui/src-tauri/src/: lib.rs
crates/cratebay-gui/src-tauri/tests/: desktop_smoke.rs
crates/cratebay-gui/src/components/: AppModal.tsx
crates/cratebay-gui/src/components/ui/: progress.tsx  sonner.tsx
crates/cratebay-gui/src/hooks/: useVms.ts
crates/cratebay-gui/src/hooks/__tests__/: useVms.test.tsx
crates/cratebay-gui/src/i18n/: messages.ts
crates/cratebay-gui/src/lib/: aiSkills.ts  vms.ts
crates/cratebay-gui/src/pages/: AiHub.tsx  Assistant.tsx  Containers.tsx  Dashboard.tsx  Images.tsx  Kubernetes.tsx  Settings.tsx  Vms.tsx  Volumes.tsx
crates/cratebay-gui/src/pages/__tests__/: AiHub.test.tsx  Assistant.test.tsx  Dashboard.test.tsx  Settings.ai.test.tsx
docs/: AI_SKILLS.md  ARCHITECTURE.en.md  ARCHITECTURE.md  RELEASE_NOTES_2026-03-08.md  ROADMAP.md  TUTORIAL.md  TUTORIAL.zh.md  VALIDATION_MATRIX.md
proto/: cargobay.proto
scripts/: ai-runtime-smoke.sh  build-release-windows.sh  ci-local.sh  docker-runtime-smoke.sh  ollama-daemon-smoke.sh  provider-canary-smoke.sh  release-readiness.sh  run-desktop-e2e-linux.sh  setup-ai.sh  setup-dev.sh
tools/opensandbox/: README.md
website/: index.html  script.js  style.css
