[package]
name = "cargobay-core"
version = "0.1.0"
edition = "2021"
description = "Core library: hypervisor abstraction, VM management"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tonic = "0.12"
prost = "0.13"
thiserror = "2"
tracing = "0.1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
